{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 68,
  "lineage": "2dcbb9e7-f91a-44b3-5b3e-d7c4c0da31a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0265a66c5c3e9db8d",
            "domain": "vpc",
            "id": "eipalloc-0265a66c5c3e9db8d",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "public_dns": "ec2-18-232-47-191.compute-1.amazonaws.com",
            "public_ip": "18.232.47.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vinicius-nat-gw",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-nat-gw",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sbi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:internet-gateway/igw-0513d8e9fb4677602",
            "id": "igw-0513d8e9fb4677602",
            "owner_id": "792310773820",
            "tags": {
              "Name": "vinicius-igw",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-igw",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ac9b5322d0e4bcea"
          },
          "dependencies": [
            "aws_vpc.sbi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0265a66c5c3e9db8d",
            "association_id": "eipassoc-0a725a8ea38fa451f",
            "connectivity_type": "public",
            "id": "nat-0706de59dd0442f4d",
            "network_interface_id": "eni-0bd2f308b1a427182",
            "private_ip": "10.0.1.223",
            "public_ip": "18.232.47.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07098190cd02caf1e",
            "tags": {
              "Name": "vinicius-nat-gw",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-nat-gw",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:route-table/rtb-0d130bd42f75e50be",
            "id": "rtb-0d130bd42f75e50be",
            "owner_id": "792310773820",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0706de59dd0442f4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vinicius-route-private-subnet",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-route-private-subnet",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac9b5322d0e4bcea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:route-table/rtb-0a11b976bc420d62c",
            "id": "rtb-0a11b976bc420d62c",
            "owner_id": "792310773820",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0513d8e9fb4677602",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vinicius-route-public-subnets",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-route-public-subnets",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac9b5322d0e4bcea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_vpc.sbi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043020394263ce215",
            "route_table_id": "rtb-0d130bd42f75e50be",
            "subnet_id": "subnet-04ab2065a994fe2d6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f829ef8c6625d3c9",
            "route_table_id": "rtb-0d130bd42f75e50be",
            "subnet_id": "subnet-0b4b4129e9e39f443"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_subnets",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b0aa056ede9ecb",
            "route_table_id": "rtb-0a11b976bc420d62c",
            "subnet_id": "subnet-07098190cd02caf1e"
          },
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00844f0844d88e688",
            "route_table_id": "rtb-0a11b976bc420d62c",
            "subnet_id": "subnet-058c7f7a566fb2753"
          },
          "dependencies": [
            "aws_internet_gateway.sbi",
            "aws_route_table.public_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:subnet/subnet-04ab2065a994fe2d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ab2065a994fe2d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792310773820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vinicius-private-1",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-private-1",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ac9b5322d0e4bcea"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:subnet/subnet-0b4b4129e9e39f443",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4b4129e9e39f443",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792310773820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vinicius-private-2",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-private-2",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ac9b5322d0e4bcea"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:subnet/subnet-07098190cd02caf1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07098190cd02caf1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792310773820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vinicius-public-1",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-public-1",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ac9b5322d0e4bcea"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:subnet/subnet-058c7f7a566fb2753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058c7f7a566fb2753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792310773820",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vinicius-public-2",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-public-2",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "vpc_id": "vpc-0ac9b5322d0e4bcea"
          },
          "dependencies": [
            "aws_vpc.sbi",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sbi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:792310773820:vpc/vpc-0ac9b5322d0e4bcea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-05d505e1f80e17b68",
            "default_route_table_id": "rtb-0fa73dd6d8c7c63ce",
            "default_security_group_id": "sg-0a7e648b16907ee7c",
            "dhcp_options_id": "dopt-0586443f3ade31002",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac9b5322d0e4bcea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa73dd6d8c7c63ce",
            "owner_id": "792310773820",
            "tags": {
              "Name": "vinicius-vpc",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            },
            "tags_all": {
              "Name": "vinicius-vpc",
              "Owner": "Vinicius Almeida",
              "Project": "Terraform"
            }
          }
        }
      ]
    }
  ]
}